--- a/src/assets/css/aside.scss
+++ b/src/assets/css/aside.scss
@@ -2,64 +2,35 @@
   .el-menu {
     border-right: none;
     background-color: $aside-bg;
-  }
 
-  .el-submenu {
-    &__title {
-      color: $aside-color;
+    &:not(.el-menu--collapse) {
+      min-width: $aside-min-width;
     }
 
-    .el-menu {
-      .el-menu-item {
-        color: $aside-color;
-        background-color: $aside-expand-bg;
-        height: 50px;
-        line-height: 50px;
-      }
+    .el-menu-item.is-active {
+      background-color: $aside-item-active-bg;
+    }
 
-      .is-active {
-        background-color: $aside-item-active-bg;
+    //.el-menu-item.is-active:hover {
+    //  background-color: transparent;
+    //}
 
-        span, i {
-          color: $aside-active-color;
-        }
-
-        // 关闭三级菜单二级菜单样式
-        ul {
-          border: none;
-        }
-      }
-
-      // 关闭三级菜单二级菜单样式
-      .is-active.is-opened {
-        background-color: $aside-bg;
-
-        ul {
-          border: none;
+    .el-submenu.is-opened {
+      & ul {
+        & li {
+          background-color: $aside-expand-bg;
         }
       }
     }
-  }
 
-  .el-menu-item:focus, .el-menu-item:hover {
-    background-color: transparent;
-  }
+    .el-menu-item:focus,
+    .el-menu-item:hover {
+      background-color: transparent;
+    }
 
-  .el-menu-item:hover i,
-  .el-menu-item:hover span {
-    color: $aside-active-color;
-  }
-
-  .el-submenu__title:hover {
-    background-color: $aside-bg;
-  }
-
-  .el-submenu__title:hover i,
-  .el-submenu__title:hover span {
-    color: $aside-active-color;
-  }
-
-  .el-menu--inline {
-    border-left: 5px solid #2c3b41;
+    .el-menu-item:hover i,
+    .el-menu-item:hover span {
+      color: $aside-text-active-color;
+    }
   }
 }
