--- a/src/assets/css/theme.scss
+++ b/src/assets/css/theme.scss
@@ -1,7 +1,13 @@
 //aside相关
 $aside-bg: #191a23;
 $aside-expand-bg: #000408;
-$aside-color: rgb(191, 203, 217);
-$aside-active-color: rgba(255, 255, 255);
+$aside-text-color: #BFCBD9;
+$aside-text-active-color: #FFFFFF;
 $aside-item-active-bg: #1890ff;
 $aside-min-width: 220px;
+
+:export{
+  asideBg:$aside-bg;
+  asideTextColor:$aside-text-color;
+  asideTextActiveColor:$aside-text-active-color;
+}
