--- a/src/assets/css/aside.scss
+++ b/src/assets/css/aside.scss
@@ -7,18 +7,34 @@
       min-width: $aside-min-width;
     }
 
-    .el-menu-item.is-active {
-      background-color: $aside-item-active-bg;
+    .el-submenu__title:hover {
+      background-color: transparent;
     }
 
-    //.el-menu-item.is-active:hover {
-    //  background-color: transparent;
-    //}
+    .el-submenu__title:hover i,
+    .el-submenu__title:hover span {
+      color: $aside-text-active-color;
+    }
+
+    .el-menu-item.is-active {
+      background-color: $aside-item-active-bg !important;
+    }
 
     .el-submenu.is-opened {
       & ul {
         & li {
           background-color: $aside-expand-bg;
+          position: relative;
+
+          &:before {
+            position: absolute;
+            left: 0;
+            top: 0;
+            bottom: 0;
+            height: 100%;
+            border-left: 5px solid #2c3b41;
+            content: '';
+          }
         }
       }
     }
