--- a/src/assets/css/index.scss
+++ b/src/assets/css/index.scss
@@ -2,10 +2,13 @@
 @import "aside";
 @import "header";
 @import "transition";
-#app,body,html{
+@import "animation";
+
+#app, .el-container, body, html {
   width: 100%;
   height: 100%;
 }
+
 body {
   font-family: "Helvetica Neue", Helvetica, "PingFang SC", "Hiragino Sans GB", "Microsoft YaHei", "微软雅黑", Arial, sans-serif;
   -webkit-font-smoothing: antialiased;
@@ -17,37 +20,5 @@ body {
 }
 
 #app {
-  .app-body {
-    display: flex;
-    flex-direction: row;
-    height: 100%;
 
-    .app-aside {
-      background-color: $aside-bg;
-      color: #fff;
-
-      .logo {
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        height: 80px;
-        padding: 0 15px;
-
-        & h2 {
-          margin: 0;
-          padding-left: 10px;
-        }
-
-        & img {
-          width: 30px;
-          height: 30px;
-          border-radius: 50%;
-        }
-      }
-    }
-    .app-container{
-      flex-direction: column;
-      background-color: #f0f2f5;
-    }
-  }
 }
