--- a/src/assets/css/index.scss
+++ b/src/assets/css/index.scss
@@ -20,5 +20,13 @@ body {
 }
 
 #app {
+  //删除input数字框的上下箭头
+  input::-webkit-outer-spin-button,
+  input::-webkit-inner-spin-button {
+    -webkit-appearance: none;
+  }
 
+  input[type="number"] {
+    -moz-appearance: textfield;
+  }
 }
